// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly without props 1`] = `
<div
  className="pageLevelErrorContainer hide"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      />
    </div>
  </div>
</div>
`;

exports[`when there are B2C errors renders correctly 1`] = `
<div
  className="pageLevelErrorContainer hide"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      />
    </div>
  </div>
</div>
`;

exports[`when there are B2C errors renders correctly 2`] = `
<div
  className="pageLevelErrorContainer show"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      >
        <li>
          error 1
        </li>
        <li>
          error 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`when there are B2C errors renders correctly with showB2CErrors set to false 1`] = `
<div
  className="pageLevelErrorContainer hide"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      />
    </div>
  </div>
</div>
`;

exports[`when there are B2C errors renders correctly with showB2CErrors set to false 2`] = `
<div
  className="pageLevelErrorContainer hide"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      />
    </div>
  </div>
</div>
`;

exports[`when there are errors renders correctly 1`] = `
<div
  className="pageLevelErrorContainer show"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      >
        <li>
          <p>
            test 1
          </p>
        </li>
        <li>
          <a
            href="#"
            onClick={[Function]}
          >
            test 2
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`when there are errors renders correctly with the optional error summary 1`] = `
<div
  className="pageLevelErrorContainer show"
>
  <div
    aria-labelledby="error-summary-title"
    className="govuk-error-summary"
    data-module="govuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="govuk-error-summary__title"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <div
      id="errorSummaryText"
    >
      <p>
        error summary
      </p>
    </div>
    <div
      className="govuk-error-summary__body"
    >
      <ul
        className="govuk-list govuk-error-summary__list"
        id="errorSummaryItems"
      >
        <li>
          <p>
            test 1
          </p>
        </li>
        <li>
          <a
            href="#"
            onClick={[Function]}
          >
            test 2
          </a>
        </li>
        <li>
          <p>
            test 3
          </p>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
